@@ -2,7 +2,6 @@ package com.kakaotech.team18.backend_server.domain.club.dto;
 
 import com.kakaotech.team18.backend_server.domain.club.entity.Category;
 import com.kakaotech.team18.backend_server.domain.club.entity.Club;
-import com.kakaotech.team18.backend_server.domain.club.entity.ClubImage;
 import com.kakaotech.team18.backend_server.domain.club.entity.ClubIntroduction;
 import com.kakaotech.team18.backend_server.domain.club.util.RecruitStatusCalculator;
 import com.kakaotech.team18.backend_server.domain.user.entity.User;
@@ -10,7 +9,6 @@ import io.swagger.v3.oas.annotations.media.Schema;
 import java.time.LocalDateTime;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 import lombok.Builder;
 
 @Builder
@@ -21,7 +19,7 @@ public record ClubDetailResponseDto(
         @Schema(description = "주요 활동 장소", example = "학생회관 101호") String location,
         @Schema(description = "동아리 카테고리", example = "STUDY") Category category,
         @Schema(description = "동아리 한 줄 소개", example = "함께 성장하는 개발 동아리입니다.") String shortIntroduction,
-        @Schema(description = "동아리 소개 이미지 URL 목록") List<String> introductionImages,
+        @Schema(description = "동아리 소개 이미지 URL 목록") List<ClubImageResponseDto> introductionImages,
         @Schema(description = "동아리 소개 (개요)", example = "저희는 스프링부트와 리액트를 공부하는 스터디 동아리입니다...") String introductionOverview,
         @Schema(description = "동아리 소개 (활동 내용)", example = "매주 월요일 정기 스터디, 분기별 해커톤 진행") String introductionActivity,
         @Schema(description = "동아리 소개 (인재상)", example = "개발에 대한 열정이 넘치는 분") String introductionIdeal,
@@ -45,8 +43,8 @@ public record ClubDetailResponseDto(
                 shortIntroduction(club.getShortIntroduction()).
                 introductionImages(clubIntroduction.map(ClubIntroduction::getImages)
                         .map(images -> images.stream()
-                                .map(ClubImage::getImageUrl)
-                                .collect(Collectors.toList()))
+                                .map(img -> new ClubImageResponseDto(img.getId(), img.getImageUrl()))
+                                .toList())
                         .orElse(List.of())).
                 introductionOverview(clubIntroduction.map(ClubIntroduction::getOverview).orElse("")).
                 introductionActivity(clubIntroduction.map(ClubIntroduction::getActivities).orElse("")).
@@ -60,4 +58,8 @@ public record ClubDetailResponseDto(
                 applicationNotice(club.getCaution()).
                 build();
     }
+    public record ClubImageResponseDto(
+            @Schema(description = "동아리 이미지 ID", example = "1") Long id,
+            @Schema(description = "동아리 이미지 URL", example = "dongairum.jpo") String url
+    ) {}
 }
